--- a/client/.env.local
+++ b/client/.env.local
@@ -1,1 +1,3 @@
-NEXT_PUBLIC_API_BASE_URL = http://localhost:8000
+NEXT_PUBLIC_API_BASE_URL = "http://localhost:8000"
+NEXT_PUBLIC_COGNITO_USER_POOL_ID = "ap-south-1_lHFntEflB"
+NEXT_PUBLIC_COGNITO_USER_POOL_CLIENT_ID = "597vn3lhv74mvooj454gf51l7o"
