--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.145",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.16.5",
     "@types/numeral": "^2.0.5",
